Fixes
Commented out Javascript for an image change on hover, loading a new
image on hover takes too long, replaced with CSS filter on hover for
invert and blur.

Git Ignore HailHydra.js

Fixed "a" tags for navigation so it doesn't add "#" in the url, also
fixes image flashing issue.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -172,3 +172,11 @@ nav li:hover {
 #contactLeft img {
 	margin-left: 30px;
 }
+
+#contactLeft a img:hover {
+    -moz-filter: invert(100%) blur(1px);
+    -webkit-filter: invert(100%) blur(1px);
+    -o-filter: invert(100%) blur(1px);
+    -ms-filter: invert(100%) blur(1px);
+    filter: invert(100%) blur(1px);
+}
